...
            android:textSize="14sp"
            android:fontFamily="@font/varela_round_regular"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9E4141"
        app:backgroundTint="#FF9E4141"
        android:text="@string/admin_delete"
        android:textColor="@color/white"
...
