...
            android:fontFamily="@font/varela_round_regular"
            android:text="@string/admin_cancel"
            android:textColor="#1D1D1D"
            android:textSize="14sp" />

        <Button
            android:id="@+id/deleteEventButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="#FF9E4141"
            app:backgroundTint="#FF9E4141"
...
