...
            android:textColor="#1D1D1D"
            android:fontFamily="@font/varela_round_regular"
            android:textSize="14sp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/deleteProfileButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:backgroundTint="#FF9E4141"
            app:backgroundTint="#FF9E4141"
            android:text="@string/admin_delete"
...
