...
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@android:drawable/ic_menu_search"
                app:tint="#A9ABA8" />

            <EditText
                android:id="@+id/searchInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/varela_round_regular"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/stateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/varela_round_regular"
                    android:gravity="center"
                    android:text="@string/browse_state_loading"
...
